# email-triage-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml
server/: __init__.py  app.py  environment.py
