[project]
name = "email-triage-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "huggingface-hub>=1.8.0",
    "openai>=2.0.0",
    "openenv>=0.1.13",
    "openenv-core>=0.2.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]

[project.scripts]
server = "server.app:main"
